# theparser

./: .gitignore  COMPLETE_MENU_STRUCTURE.md  MENU_FIX.md  README.md  main.py  pyproject.toml  requirements.txt  test_stats.py
.github/: copilot-instructions.md
agent/: AGENT_MENU.md  IMPLEMENTATION_SUMMARY.md  agent.py  agent_menu.py  models.py
database/: DB_MENU.md  IMPLEMENTATION_SUMMARY.md  INTERACTIVE_UPDATER.md  INTERACTIVE_UPDATE_SUMMARY.md  QUICK_START.md  README.md  SCHEMA.md  TYPE_CONVERSION.md  VALIDATION_IMPLEMENTATION.md  VALIDATION_UPDATE.md  data_importer.py  data_updater.py  data_validator.py  db_manager.py  db_menu.py  interactive_updater.py  query_examples.py  test_db.py
reports/: analyze_internamentos.py  data_validation_report.csv  parse_report_20250925_123450.json  parse_report_20250925_123642.json  parse_report_20250925_123710.json  parse_report_20250926_154018.json  parse_report_20250926_155221.json  parse_report_20250926_161540.json  parse_report_20250926_162659.json  parse_report_20251010_140859.json  parse_report_20251010_141219.json  parsing_reports_index.json  year_analysis_sample.json
reports/internamentos_analysis/: report_20251010_175225.txt
reports/internamentos_analysis/csv_exports/: antibiotics_20251010_175225.csv  burns_20251010_175225.csv  main_data_20251010_175225.csv  medications_20251010_175225.csv  pathologies_20251010_175225.csv  procedures_20251010_175225.csv
